# FilmExplorer

./: .gitignore  .replit  README.md  apitest.py  findingmediaheckyeah.py  forms.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  tmdb_api.py  tools.py  userdata.json
MovieRecommenderWeb/: findingmediaheckyeah.py  searchnwatch.py
MovieRecommenderWeb/templates/: index.html  preset.html
instance/: app.db
static/: home.css
templates/: 404.html  admin_dashboard.html  base_media.html  browse.html  find.html  gag.html  index.html  login.html  preset.html  recommended_media.html  search.html  search_media.html  search_user.html  user.html
